--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <select id="stock-select"></select>
     <button onclick="buyStock()">Buy</button>
     <button onclick="sellStock()">Sell</button>
+    <p id="feedback" style="color: green;"></p>
   </div>
   <script src="app.js"></script>
 </body>
