--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <h2>Trade Stocks</h2>
     <label for="stock-select">Choose a stock:</label>
     <select id="stock-select"></select>
+    <p id="stock-info"></p>
     <button onclick="buyStock()">Buy</button>
     <button onclick="sellStock()">Sell</button>
-    <p id="feedback" style="color: green;"></p>
+    <p id="feedback" class="feedback"></p>
   </div>
   <script src="app.js"></script>
 </body>
