--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Investment Simulation</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Include Chart.js -->
 </head>
 <body>
   <h1>Investment Simulation</h1>
@@ -22,6 +23,7 @@
     <button onclick="sellStock()">Sell</button>
     <p id="feedback" class="feedback"></p>
   </div>
+  <canvas id="stockChart" width="400" height="200"></canvas> <!-- Placeholder for the stock chart -->
   <script src="app.js"></script>
 </body>
 </html>
