--- a/index.html
+++ b/index.html
@@ -4,28 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Investment Simulation</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Investment Simulation</h1>
-  <div id="balance">Balance: $500</div>
-
-  <div id="stock-list">
-    <h2>Stocks</h2>
-    <ul id="stocks"></ul>
+  <div id="portfolio">
+    <h2>Your Portfolio</h2>
+    <p>Balance: $<span id="balance">1000</span></p>
+    <ul id="stock-list"></ul>
   </div>
-
-  <div id="stock-info">
-    <h2>Stock Information</h2>
-    <p id="stock-details">Click on a stock to view details.</p>
+  <div id="trade">
+    <h2>Trade Stocks</h2>
+    <label for="stock-select">Choose a stock:</label>
+    <select id="stock-select"></select>
+    <button onclick="buyStock()">Buy</button>
+    <button onclick="sellStock()">Sell</button>
+    <p id="feedback" style="color: green;"></p>
   </div>
-
-  <div id="chart">
-    <h2>Investment Chart</h2>
-    <canvas id="investmentChart"></canvas>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
