--- a/index.html
+++ b/index.html
@@ -40,3 +40,9 @@
   <script src="app.js"></script>
 </body>
 </html>
+<div id="add-funds">
+  <label for="fund-amount">Add Funds (Max $500): </label>
+  <input type="number" id="fund-amount" placeholder="0" min="1" max="500">
+  <button onclick="addFunds()">Add Funds</button>
+  <p id="fund-feedback" class="feedback"></p>
+</div>
